white halo on weather picto for readability + smaller tile margin + am-pm bugfix

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,3 +1,5 @@
+@tileMargin: 15px;
+
 body {
     font-family: 'Alegreya', serif;
     background-image: url('parchment-texture.png');
@@ -9,7 +11,7 @@ body {
 section {
     border: solid 2px brown;
     background-color: beige;
-    padding: 20px;
+    padding: @tileMargin;
     margin-bottom: 50px;
     position: relative;
     min-height: 80px;
@@ -24,6 +26,10 @@ section {
             margin-bottom: 0;
         }
     }
+}
+
+#output span{
+    font-weight: bold;
 }
 
 .selected-weather-effects {
@@ -52,21 +58,23 @@ canvas {
 }
 
 .picto-list:not(:empty) {
-    margin: auto -10px -10px -10px;
+    margin: auto -@tileMargin/2 -@tileMargin/2 -@tileMargin/2;
     h2,
     header {
-        margin: 10px;
+        margin: @tileMargin/2;
     }
     .wi {
         font-size: 30px;
         height: 60px;
         width: 60px;
         line-height: 60px;
-        margin: 10px;
+        margin: @tileMargin/2;
         text-align: center;
         background-image: url(parchtile.png);
         background-size: cover;
         position: relative;
+        text-shadow: 0 0 0.2em white;
+        cursor: pointer;
         .severity-loop(5);
         .precipitation-time {
             color: white;
@@ -154,17 +162,17 @@ ul.wind-effects {
         display: block;
     }
     .picto-list:not(:empty) {
-        margin: auto -20px -20px -20px;
+        margin: auto -@tileMargin -@tileMargin -@tileMargin;
         h2,
         header {
-            margin: 20px;
+            margin: @tileMargin;
         }
         .wi {
             font-size: 45px;
             height: 80px;
             width: 80px;
             line-height: 80px;
-            margin: 20px;
+            margin: @tileMargin;
         }
     }
 }
